Added Race Random Generator, Added 1 Age loop, some unit tests

--- a/NineWebApp/Views/Home/Race.cshtml
+++ b/NineWebApp/Views/Home/Race.cshtml
@@ -9,7 +9,13 @@
  {
      var e = document.getElementById("race");
      var selected = e.options[e.selectedIndex].value;
-     window.location = selected;
+     if (selected == "Select a race") {
+         window.location = "home";
+     }
+     else {
+         window.location = selected;
+     }
+    
  }
 </script>
 
